# ebpf-mon

./: Cargo.toml  README.md  build-musl.sh  demo.sh  run-ebpf.sh  rust-toolchain.toml  settings.json
ebpf-mon/: Cargo.toml  build.rs
ebpf-mon-common/: Cargo.toml  build.rs
ebpf-mon-common/src/: buffer.rs  capabilities.rs  cgroup.rs  co_re.rs  fs.rs  lib.rs  macros.rs  modules.rs  network.rs  path.rs  process.rs  string.rs  utils.rs
ebpf-mon-common/src/alloc/: bpf.rs
ebpf-mon-common/src/buffer/: bpf.rs  user.rs
ebpf-mon-common/src/capabilities/: user.rs
ebpf-mon-common/src/cgroup/: bpf.rs  user.rs
ebpf-mon-common/src/co_re/: core_cgroup.rs  core_cred.rs  core_fs.rs  core_net.rs  core_nsproxy.rs  core_task_struct.rs  gen.rs
ebpf-mon-common/src/co_re/c-bindings/: shim.c
ebpf-mon-common/src/fs/: bpf.rs  user.rs
ebpf-mon-common/src/globals/: bpf.rs
ebpf-mon-common/src/modules/: bpf.rs  fs.rs  ipc.rs  user.rs
ebpf-mon-common/src/modules/fs/: file_open.rs  policy.rs  vfs_tracker.rs
ebpf-mon-common/src/modules/ipc/: policy.rs  unix_socket.rs
ebpf-mon-common/src/modules/process/: process.rs
ebpf-mon-common/src/path/: bpf.rs  user.rs
ebpf-mon-common/src/policy/: ir.rs  linker.rs  mod.rs  passes.rs  translator.rs  types.rs
ebpf-mon-common/src/string/: bpf.rs  user.rs
ebpf-mon-ebpf/: Cargo.toml
ebpf-mon-ebpf/src/: enforcement.rs  filesystem.rs  main.rs  network.rs  process.rs
ebpf-mon/src/: container.rs  enforcement.rs  events.rs  main.rs  manager.rs  program.rs
test-harness/: docker_test.sh  run_validation.sh  test_workload.py
test-harness/validation_results/: ebpf_events.json  validation_report.txt
