[workspace]
resolver = "2"
members = ["ebpf-mon", "ebpf-mon-common", "ebpf-mon-ebpf"]
default-members = ["ebpf-mon", "ebpf-mon-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1"}
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }
cfg-if = { version = "1.0.0", default-features = false }
paste = { version = "1.0.15", default-features = false }
bytes = { version = "1.7.1", default-features = false }
serde = { version = "1.0.214", default-features = false }
thiserror = { version = "2.0.11" }

[profile.release.package.ebpf-mon-ebpf]
debug = 2
codegen-units = 1
