[package]
name = "ebpf-mon"
version = "0.1.0"
edition = "2021"


[dependencies]
ebpf-mon-common = { path = "../ebpf-mon-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "time",
] }
serde_json = "1.0.140"
bytes.workspace = true
thiserror.workspace = true
serde.workspace = true
clap = { version = "4.5", features = ["derive"] }
regex = "1.12.2"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cfg-if = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true, optional = true }

# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
ebpf-mon-ebpf = { path = "../ebpf-mon-ebpf" }

[[bin]]
name = "ebpf-mon"
path = "src/main.rs"
